# ultra-supabotv2

./: .gitignore  DEPLOYMENT_GUIDE.md  Makefile  README.md  TESTING_GUIDE.md  nixpacks.toml  railway.json  requirements.txt  restart_servers.bat  start.bat  start.sh  stores.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  business_rules.yaml  debug_routes.py  docker-compose.yml  main.py  nixpacks.toml  pyproject.toml  query_stores.py  railway.json  requirements.txt  test_cors.bat  test_cors.sh
backend/alembic/: README  env.py
backend/alembic/versions/: 2025_10_20_1609-60a8995b51cf_initial_database_schema_with_products_.py  2025_11_18_1453-8a1e443c52ce_add_report_presets_table.py  2026_01_27_1600-a1b2c3d4e5f6_add_replenishment_tables.py  2026_02_05_1200-b2c3d4e5f6g7_add_store_filters_table.py  2026_02_09_1400-c3d4e5f6g7h8_add_replenishment_config_table.py  2026_03_18_0001-b2c3d4e5f6a7_add_max_cover_days_to_store_tiers.py  2026_03_23_0001-c3d4e5f6a7b8_add_product_barcodes_table.py  2026_04_15_0001-d4e5f6a7b8c9_add_tags_to_products.py  2026_04_30_1000-e5f6a7b8c9d0_add_algorithm_settings_table.py  2026_05_03_0001-f6a7b8c9d0e1_add_velocity_category_multipliers.py  2026_05_03_0002-a7b8c9d0e1f2_category_multipliers_per_store.py  2026_05_04_0001-b8c9d0e1f2a3_add_total_sold_qty_to_shipment_plans.py  2026_07_04_0001-g1h2i3j4k5l6_add_percentile_algorithm.py
backend/app/: main.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  security.py
backend/app/models/: __init__.py  inventory.py  store.py  (+7 more)
backend/scripts/: seed_replenishment_data.py
(+148 files in other folders)
